[tool.poetry]
name = "uvicorn-websockets-example"
version = "0.1.0"
description = "Example project for using uvicorn websockets"
authors = ["Ville Kärkkäinen <ville.karkkainen@outlook.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
uvicorn = "0.20.0"
websockets = "10.4"
loguru = "0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "22.10.0"
flake8 = "6.0.0"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
